feat: 升级 element-plus 到 2.6.0 (#4092)

--- a/frontend/src/styles/common.scss
+++ b/frontend/src/styles/common.scss
@@ -412,5 +412,9 @@ html {
 }
 
 .p-mb-5 {
-	margin-bottom: 5px !important;
+    margin-bottom: 5px !important;
+}
+
+.p-w-200 {
+    width: 200px !important;
 }
