fix: 解决安装应用过程中出现的状态异常问题 (#4156)

--- a/frontend/src/styles/common.scss
+++ b/frontend/src/styles/common.scss
@@ -418,3 +418,11 @@ html {
 .p-w-200 {
     width: 200px !important;
 }
+
+.p-ml-20 {
+    margin-left: 20px !important;
+}
+
+.p-mt-20 {
+    margin-top: 20px !important;
+}
