feat: 增加应用商店显示的过滤数量 (#4183)

--- a/frontend/src/styles/common.scss
+++ b/frontend/src/styles/common.scss
@@ -419,6 +419,18 @@ html {
     width: 200px !important;
 }
 
+.p-w-100 {
+    width: 100px !important;
+}
+
+.p-w-150 {
+    width: 150px !important;
+}
+
+.p-w-400 {
+    width: 400px !important;
+}
+
 .p-ml-20 {
     margin-left: 20px !important;
 }
