--- a/frontend/src/assets/iconfont/iconfont.css
+++ b/frontend/src/assets/iconfont/iconfont.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: "panel"; /* Project id 3575356 */
-  src: url('iconfont.woff2?t=1716193696248') format('woff2'),
-       url('iconfont.woff?t=1716193696248') format('woff'),
-       url('iconfont.ttf?t=1716193696248') format('truetype'),
-       url('iconfont.svg?t=1716193696248#panel') format('svg');
+  src: url('iconfont.woff2?t=1717468101688') format('woff2'),
+       url('iconfont.woff?t=1717468101688') format('woff'),
+       url('iconfont.ttf?t=1717468101688') format('truetype'),
+       url('iconfont.svg?t=1717468101688#panel') format('svg');
 }
 
 .panel {
@@ -12,6 +12,94 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.p-docker1:before {
+  content: "\e689";
+}
+
+.p-Firefox:before {
+  content: "\e87c";
+}
+
+.p-m-ios:before {
+  content: "\e60e";
+}
+
+.p-m-pc:before {
+  content: "\e771";
+}
+
+.p-m-theworld:before {
+  content: "\e947";
+}
+
+.p-m-android:before {
+  content: "\e9e0";
+}
+
+.p-m-tencent:before {
+  content: "\e609";
+}
+
+.p-m-windows:before {
+  content: "\e6a0";
+}
+
+.p-m-machine:before {
+  content: "\e862";
+}
+
+.p-m-mobile:before {
+  content: "\e620";
+}
+
+.p-m-ucweb:before {
+  content: "\e603";
+}
+
+.p-m-edge:before {
+  content: "\e8e2";
+}
+
+.p-m-2345explorer:before {
+  content: "\e60a";
+}
+
+.p-m-chrome:before {
+  content: "\ea09";
+}
+
+.p-m-opera:before {
+  content: "\ea0e";
+}
+
+.p-m-linux:before {
+  content: "\e80b";
+}
+
+.p-m-maxthon:before {
+  content: "\e676";
+}
+
+.p-m-mac:before {
+  content: "\ef2d";
+}
+
+.p-m-ie:before {
+  content: "\eaab";
+}
+
+.p-Chrome-OS:before {
+  content: "\e60b";
+}
+
+.p-m-safari:before {
+  content: "\e60c";
+}
+
+.p-m-360se:before {
+  content: "\e678";
 }
 
 .p-monitor-1:before {
