style: 黑金主题样式优化 (#5337)

--- a/frontend/src/styles/element-dark.scss
+++ b/frontend/src/styles/element-dark.scss
@@ -44,7 +44,7 @@ html.dark {
         --el-tag-border-color: var(--el-color-danger);
     }
     .el-card {
-        --el-card-bg-color: #111417;
+        --el-card-bg-color: rgb(35, 35, 35);
         color: #ffffff;
         border: 1px solid var(--el-card-border-color) !important;
     }
