fix: 解决深色模式下版本显示问题 (#5402)
Refs #5370

--- a/frontend/src/styles/element-dark.scss
+++ b/frontend/src/styles/element-dark.scss
@@ -1,5 +1,6 @@
 html.dark {
     --el-box-shadow-light: 0px 0px 4px rgba(0, 0, 0, 0.1) !important;
+    --dark-gold-base-color: #5a5a5a;
     --el-border-color-lighter: #1d2023;
     --el-fill-color-blank: #111417;
     --el-bg-color: rgba(0, 11, 21, 1);
