feat: 文件编辑器侧边栏指上和选中文件样式调整 (#5689)

--- a/frontend/src/styles/common.scss
+++ b/frontend/src/styles/common.scss
@@ -442,3 +442,15 @@ html {
 .el-tag {
     cursor: pointer;
 }
+
+.monaco-editor-tree-light .el-tree-node__content:hover {
+    background-color: #e5eefd;
+}
+
+.monaco-editor-tree-dark .el-tree-node__content:hover {
+    background-color: #111417;
+}
+
+.monaco-editor-tree-dark .el-tree-node.is-current > .el-tree-node__content {
+    background-color: #111417;
+}
