--- a/frontend/src/styles/common.scss
+++ b/frontend/src/styles/common.scss
@@ -447,6 +447,10 @@ html {
     background-color: #e5eefd;
 }
 
+.monaco-editor-tree-light .el-tree-node.is-current > .el-tree-node__content {
+    background-color: #e5eefd;
+}
+
 .monaco-editor-tree-dark .el-tree-node__content:hover {
     background-color: #111417;
 }
