update frontend (tuananh: primary color, language VI)

--- a/frontend/src/styles/element.scss
+++ b/frontend/src/styles/element.scss
@@ -1,6 +1,7 @@
 :root {
-    --el-color-primary: #005eeb;
-    --el-color-primary-dark-2: #0054d3;
+    // --el-color-primary: #005eeb;
+    --el-color-primary: #e4aa24;
+    --el-color-primary-dark-2: #ffd063;
     --el-color-primary-light-1: #196eed;
     --el-color-primary-light-2: #337eef;
     --el-color-primary-light-3: #4c8ef1;
