--- a/frontend/src/styles/element.scss
+++ b/frontend/src/styles/element.scss
@@ -14,11 +14,11 @@
 }
 
 html {
-    --el-box-shadow-light: 0px 0px 4px rgba(0, 94, 235, 0.1) !important;
+    --el-box-shadow-light: 6px 0px 4px rgb(96 115 143 / 25%) !important;
 
     --el-text-color-regular: #646a73 !important;
     // * menu
-    --el-menu-bg-color: rgba(0, 94, 235, 0.1) !important;
+    --el-menu-bg-color: rgb(244, 244, 244) !important;
     --el-menu-item-bg-color: rgba(255, 255, 255, 0.3);
     --el-menu-item-bg-color-active: #ffffff;
     --panel-menu-width: 180px;
