update frontend (tuananh: update sidebar)

--- a/frontend/src/styles/element-dark.scss
+++ b/frontend/src/styles/element-dark.scss
@@ -120,6 +120,7 @@ html.dark {
     }
     .sidebar-container {
         border-right: 1px solid var(--el-border-color-light);
+        // box-shadow: 2px 0px 2px rgb(96 115 143 / 15%) !important;
     }
     .el-menu {
         .el-menu-item {
