--- a/frontend/src/styles/element.scss
+++ b/frontend/src/styles/element.scss
@@ -18,12 +18,13 @@ html {
 
     --el-text-color-regular: #646a73 !important;
     // * menu
-    --el-menu-bg-color: rgb(244, 244, 244) !important;
-    --el-menu-item-bg-color: rgba(255, 255, 255, 0.3);
+    // --el-menu-bg-color: rgb(244, 244, 244) !important;
+    --el-menu-bg-color: #ECF4F7 !important;
+    --el-menu-item-bg-color: rgba(255, 255, 255, 0.948);
     --el-menu-item-bg-color-active: #ffffff;
-    --panel-menu-width: 180px;
+    --panel-menu-width: 250px;
     --panel-menu-hide-width: 75px;
-    --panel-text-color: #1f2329;
+    --panel-text-color: #1f4061;
     --panel-border: 1px solid #f2f2f2;
     --panel-button-active: #ffffff;
 
