--- a/frontend/src/layout/components/Sidebar/index.scss
+++ b/frontend/src/layout/components/Sidebar/index.scss
@@ -2,14 +2,18 @@
     user-select: none;
     background: none;
     width: 100%;
-    padding: 0 7px;
+    // padding: 0 7px;
     .el-menu-item {
-        border-radius: 4px;
+        // border-radius: 4px;
         background-color: var(--el-menu-item-bg-color);
-        margin: 6px 0;
+        // margin: 6px 0;
         height: 46px;
         box-shadow: 0px 0px 4px rgba(0, 94, 235, 0.1);
         box-sizing: border-box;
+        background-color: var(--el-menu-item-bg-color);
+        box-shadow: 0px -1px 0px rgb(96 115 143 / 10%) !important;
+        outline: none;
+        border: none;
 
         &:hover {
             .el-icon {
@@ -36,6 +40,8 @@
         }
     }
     .el-sub-menu {
+        background-color: var(--el-menu-item-bg-color);
+        box-shadow: 0px -1px 0px rgb(96 115 143 / 10%) !important;
         &.is-active {
             .el-sub-menu__title {
                 span {
