--- a/frontend/src/styles/element.scss
+++ b/frontend/src/styles/element.scss
@@ -1,7 +1,9 @@
 :root {
     // --el-color-primary: #005eeb;
-    --el-color-primary: #e4aa24;
-    --el-color-primary-dark-2: #ffd063;
+    // --el-color-primary: #e4aa24;
+    --el-color-primary: #1f8e39;
+    // --el-color-primary-dark-2: #ffd063;
+    --el-color-primary-dark-2: #76ff64;
     --el-color-primary-light-1: #196eed;
     --el-color-primary-light-2: #337eef;
     --el-color-primary-light-3: #4c8ef1;
