:bug : resolve website bug

--- a/frontend/src/styles/element.scss
+++ b/frontend/src/styles/element.scss
@@ -21,7 +21,7 @@ html {
     --el-text-color-regular: #646a73 !important;
     // * menu
     // --el-menu-bg-color: rgb(244, 244, 244) !important;
-    --el-menu-bg-color: #ECF4F7 !important;
+    --el-menu-bg-color: #ecf4f7 !important;
     --el-menu-item-bg-color: rgba(255, 255, 255, 0.948);
     --el-menu-item-bg-color-active: #ffffff;
     --panel-menu-width: 250px;
